--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,11 +1,8 @@
+---
 name: Test Schaufel
 
 # Run this workflow every time a new commit pushed to your repository
 on:
-  push:
-    #branches: '**'
-    #branches-ignore: 'main'
-
   pull_request:
     #branches: '**'
     #branches-ignore: 'main'
@@ -25,12 +22,14 @@ jobs:
     strategy:
       matrix:
         # also test 'latest', eventually this will be upgraded to a newer version and might fail early
-        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-latest]
-        #os: [ubuntu-latest]
+        os:
+          - ubuntu-20.04
+          - ubuntu-22.04
+          - ubuntu-24.04
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Versions
         run: echo "${{ matrix.os }}"
@@ -74,14 +73,14 @@ jobs:
         run: diff -q src/main.c main.c
   pr-test-freebsd:
     name: Test Schaufel on FreeBSD
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Run FreeBSD test
         id: test
-        uses: vmactions/freebsd-vm@v0
+        uses: vmactions/freebsd-vm@v1
         with:
           usesh: true
           prepare: |
