--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -31,8 +31,8 @@ jobs:
           # - clang
         include:
           - cc: gcc
-            LDFLAGS: ''
-            CFLAGS: '-O2'
+            LDFLAGS: ""
+            CFLAGS: "-O2"
           # # Disable Clang (enable required: matrix.cc.clang)
           # - cc: clang
           #   # # Disable ASan, incompatible w/ Valgrind test
@@ -75,12 +75,40 @@ jobs:
             schaufel_*.buildinfo
             schaufel_*.changes
             schaufel_*.deb
+  release:
+    needs: build-deb-gcc
+    name: Debian-Package (${{ matrix.os }}, ${{ matrix.cc }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+        os:
+          - ubuntu-22.04
+          - ubuntu-24.04
+        cc:
+          - gcc
+          # # Disable Clang (enable required: matrix.include.cc: clang)
+          # - clang
+    env:
+      CC: ${{ matrix.cc }}
+      LDFLAGS: ${{ matrix.LDFLAGS }}
+      CFLAGS: ${{ matrix.CFLAGS }}
+    permissions:
+      contents: write
+      packages: write
+      actions: read
+    steps:
+      - name: Download Debian package
+        uses: actions/download-artifact@v4
+        with:
+          name: Packages-${{ matrix.os }}
 
       - name: Release package(s)
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             schaufel_*.buildinfo
             schaufel_*.changes
             schaufel_*.deb
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
